--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: blog
-title: Blog
+title: Frederick Cheng
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
+  Research website for Frederick Cheng at the University of Waterloo
 last_modified_at: 2018-08-03
 no_link_title: false 
 no_excerpt: false 
