--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: blog
+layout: about
 title: Frederick Cheng
 description: >
   Research website for Frederick Cheng at the University of Waterloo
