--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@ last_modified_at: 2018-08-03
 no_link_title: false 
 no_excerpt: false 
 hide_image: false
+hide_description: true
 cover: true
 ---
+
+My research interest lies in the sustainable development of water resources by exploring the interaction between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
