--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@ hide_image: false
 hide_description: true
 cover: true
 ---
-![pic](/assets/img/blog/1456936992.png "my pic")
+
+![Download Buttons](/assets/img/blog/1456936992.png){:.border.lead width="1776" height="258" loading="lazy"}
+
+
 My research interest lies in the sustainable development of water resources by exploring the interaction between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
