--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 ---
-layout: about
+layout: page
 title: Frederick Cheng
 description: >
   Research website for Frederick Cheng at the University of Waterloo
 last_modified_at: 2018-08-03
 no_link_title: false 
 no_excerpt: false 
-hide_image: false
 hide_description: true
-cover: true
 ---
 
 ![Download Buttons](/assets/img/blog/1456936992.png){:.border.lead width="1776" height="258" loading="lazy"}
