--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@ hide_description: true
 sitemap: false
 ---
 
-
-![Download Buttons](/assets/img/blog/1456936992.png){:.border.lead width="1776" height="258" loading="lazy"}
-
+<img src="/assets/img/blog/1456936992.png" alt="hi" class="inline"/>
 
 My research interest lies in the sustainable development of water resources by exploring the interaction between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
