--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ hide_description: true
 sitemap: false
 ---
 
-<img src="/assets/img/blog/1456936992.png" alt="hi" ALIGN=”left”/>
+<img src="/assets/img/blog/1456936992.png" alt="hi" ALIGN=”left”>
 
 My research interest lies in the sustainable development of water resources by exploring the interaction between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
