--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@ layout: page
 title: Frederick Cheng
 description: >
   Research website for Frederick Cheng at the University of Waterloo
-hide_description: true
-sitemap: false
+no_link_title: false 
+no_excerpt: false 
+hide_image: false
+cover: true
 ---
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;">
