--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Frederick Cheng
 description: >
   Research website for Frederick Cheng at the University of Waterloo
 no_link_title: false 
+hide_description: true
 no_excerpt: false 
 hide_image: false
 cover: true
