--- a/teaching/book/lectures-and-presentations.html
+++ b/teaching/book/lectures-and-presentations.html
@@ -202,7 +202,7 @@ div.csl-indent {
 <h2><span class="header-section-number">6.1</span> Wetlandscapes: Land-use legacies and water quality futures</h2>
 <p>An invited seminar jointly presented by Dr Kimberly Van Meter and I at the Water, Wetlands, and Watersheds Seminar Series hosted by the Howard T. Odum Center for Wetlands at the University of Florida (Jan 13, 2021)</p>
 <div align="center">
-<iframe width="560" height="315" src="https://youtu.be/2sgdS-4XmTw" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/2sgdS-4XmTw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
@@ -210,7 +210,7 @@ div.csl-indent {
 <h2><span class="header-section-number">6.2</span> Biogeochemical hotspots: The role of small wetlands in landscape nutrient processing</h2>
 <p>An invited lecture for a senior undergraduate course (aquatic ecology) on the role of small wetlands in removing nitrogen and phosphorus in the landscape (Spring 2020)</p>
 <div align="center">
-<iframe width="560" height="315" src="https://youtu.be/-vixeVeaFBQ" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/-vixeVeaFBQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
@@ -218,7 +218,7 @@ div.csl-indent {
 <h2><span class="header-section-number">6.3</span> Understanding head potentials in aquifer/aquitard systems</h2>
 <p>A presentation for an environmental fluid mechanics course on differentiating piezometric and potentiometric head in groundwater systems (Dec 2012)</p>
 <div align="center">
-<iframe width="560" height="315" src="https://youtu.be/z8Z2EdZgnlQ" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/z8Z2EdZgnlQ" frameborder="0" allowfullscreen>
 </iframe>
 </div>
 
