--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ cover: true
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;">
 
-My research interest lies in the sustainable development of water resources by exploring the interaction between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
+I am a PhD candidate in the [Department of Civil and Environmental Engineering](https://uwaterloo.ca/civil-environmental-engineering/) at the [University of Waterloo](https://uwaterloo.ca). My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
+
+Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons. 
