--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ cover: true
 ---
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;">
-
-I am a PhD candidate in the [Department of Civil and Environmental Engineering](https://uwaterloo.ca/civil-environmental-engineering/) at the [University of Waterloo](https://uwaterloo.ca). My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
+ 
+I am a PhD candidate in the <a href="https://uwaterloo.ca/civil-environmental-engineering/">Department of Civil and Environmental Engineering</a> at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
 Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons. 
