--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@ cover: true
  
 I am a PhD candidate in the <a href="https://uwaterloo.ca/civil-environmental-engineering/">Department of Civil and Environmental Engineering</a> at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
-Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons. 
+ <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons. 
