--- a/teaching/book/complexity-in-environmental-systems.html
+++ b/teaching/book/complexity-in-environmental-systems.html
@@ -159,8 +159,28 @@ div.csl-indent {
 <li><a href="./">Frederick Cheng</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a></li>
-<li class="chapter" data-level="2" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>2</b> Contaminant Transport</a></li>
+<li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Introduction</a>
+<ul>
+<li class="chapter" data-level="1.1" data-path="index.html"><a href="index.html#teaching-philosophy"><i class="fa fa-check"></i><b>1.1</b> Teaching Philosophy</a></li>
+<li class="chapter" data-level="1.2" data-path="index.html"><a href="index.html#new-content"><i class="fa fa-check"></i><b>1.2</b> New Content</a></li>
+</ul></li>
+<li class="chapter" data-level="2" data-path="intro.html"><a href="intro.html"><i class="fa fa-check"></i><b>2</b> Contaminant Transport</a>
+<ul>
+<li class="chapter" data-level="2.1" data-path="intro.html"><a href="intro.html#lentic-ecosystems"><i class="fa fa-check"></i><b>2.1</b> Lentic Ecosystems</a>
+<ul>
+<li class="chapter" data-level="2.1.1" data-path="intro.html"><a href="intro.html#general-mass-balance-and-assumptions"><i class="fa fa-check"></i><b>2.1.1</b> General Mass Balance and Assumptions</a></li>
+<li class="chapter" data-level="2.1.2" data-path="intro.html"><a href="intro.html#mass-transport-processes"><i class="fa fa-check"></i><b>2.1.2</b> Mass Transport Processes</a></li>
+<li class="chapter" data-level="2.1.3" data-path="intro.html"><a href="intro.html#mass-removal-processes"><i class="fa fa-check"></i><b>2.1.3</b> Mass Removal Processes</a></li>
+<li class="chapter" data-level="2.1.4" data-path="intro.html"><a href="intro.html#residence-time"><i class="fa fa-check"></i><b>2.1.4</b> Residence Time</a></li>
+<li class="chapter" data-level="2.1.5" data-path="intro.html"><a href="intro.html#damkohler-number"><i class="fa fa-check"></i><b>2.1.5</b> Damkohler Number</a></li>
+</ul></li>
+<li class="chapter" data-level="2.2" data-path="intro.html"><a href="intro.html#streams-and-rivers"><i class="fa fa-check"></i><b>2.2</b> Streams and Rivers</a>
+<ul>
+<li class="chapter" data-level="2.2.1" data-path="intro.html"><a href="intro.html#general-mass-balance-and-assumptions-1"><i class="fa fa-check"></i><b>2.2.1</b> General Mass Balance and Assumptions</a></li>
+<li class="chapter" data-level="2.2.2" data-path="intro.html"><a href="intro.html#residence-time-1"><i class="fa fa-check"></i><b>2.2.2</b> Residence Time</a></li>
+<li class="chapter" data-level="2.2.3" data-path="intro.html"><a href="intro.html#dispersion"><i class="fa fa-check"></i><b>2.2.3</b> Dispersion</a></li>
+</ul></li>
+</ul></li>
 <li class="chapter" data-level="3" data-path="flow-through-porous-media.html"><a href="flow-through-porous-media.html"><i class="fa fa-check"></i><b>3</b> Flow Through Porous Media</a></li>
 <li class="chapter" data-level="4" data-path="complexity-in-environmental-systems.html"><a href="complexity-in-environmental-systems.html"><i class="fa fa-check"></i><b>4</b> Complexity in Environmental Systems</a></li>
 <li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a>
@@ -173,6 +193,12 @@ div.csl-indent {
 <li class="chapter" data-level="6.1" data-path="lectures-and-presentations.html"><a href="lectures-and-presentations.html#wetlandscapes-land-use-legacies-and-water-quality-futures"><i class="fa fa-check"></i><b>6.1</b> Wetlandscapes: Land-use legacies and water quality futures</a></li>
 <li class="chapter" data-level="6.2" data-path="lectures-and-presentations.html"><a href="lectures-and-presentations.html#biogeochemical-hotspots-the-role-of-small-wetlands-in-landscape-nutrient-processing"><i class="fa fa-check"></i><b>6.2</b> Biogeochemical hotspots: The role of small wetlands in landscape nutrient processing</a></li>
 <li class="chapter" data-level="6.3" data-path="lectures-and-presentations.html"><a href="lectures-and-presentations.html#understanding-head-potentials-in-aquiferaquitard-systems"><i class="fa fa-check"></i><b>6.3</b> Understanding head potentials in aquifer/aquitard systems</a></li>
+</ul></li>
+<li class="chapter" data-level="7" data-path="communicating-your-research.html"><a href="communicating-your-research.html"><i class="fa fa-check"></i><b>7</b> Communicating your research</a>
+<ul>
+<li class="chapter" data-level="7.1" data-path="communicating-your-research.html"><a href="communicating-your-research.html#stakeholder-infographics"><i class="fa fa-check"></i><b>7.1</b> Stakeholder Infographics</a></li>
+<li class="chapter" data-level="7.2" data-path="communicating-your-research.html"><a href="communicating-your-research.html#up-goer-five-challenge"><i class="fa fa-check"></i><b>7.2</b> Up-Goer Five Challenge</a></li>
+<li class="chapter" data-level="7.3" data-path="communicating-your-research.html"><a href="communicating-your-research.html#haiku-your-research"><i class="fa fa-check"></i><b>7.3</b> Haiku Your Research</a></li>
 </ul></li>
 <li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
