--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ hide_image: false
 cover: true
 ---
 
-<img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;" class="responsive">
+<img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:100%;height:auto">
  
 I am a PhD candidate in the <a href="https://uwaterloo.ca/civil-environmental-engineering/">Department of Civil and Environmental Engineering</a> at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
