--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: Frederick Cheng
 description: >
-  Research website for Frederick Cheng at the University of Waterloo
+  Research website for Frederick Cheng at Colorado State University
 no_link_title: false 
 hide_description: true
 no_excerpt: false 
@@ -12,6 +12,7 @@ cover: true
 
 <img src="/assets/img/blog/1456936992.png" alt="hi" style="float:right;width:35%;height:auto">
  
-I am a PhD candidate in the <a href="https://uwaterloo.ca/civil-environmental-engineering/">Department of Civil and Environmental Engineering</a> at the <a href="https://uwaterloo.ca/">University of Waterloo</a>. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
+I am a postdoctoral fellow in the Department of Ecosystem Science and Sustainability <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. I will be starting as an assistant professor in environmental science at the <a href="https://evsc.as.virginia.edu/">University of Virginia</a> in January 2024. My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
  <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons! 
+
