--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: page
-title: Frederick Cheng
-description: >
-  Research website for Frederick Cheng at Colorado State University
+title: Sustainable Watersheds Group
+description: Research website for Frederick Cheng at Colorado State University
 no_link_title: false 
 hide_description: true
 no_excerpt: false 
@@ -14,7 +13,7 @@ cover: true
  
 The Sustainable Watersheds Group at the University of Virginia is focused on how we can manage the natural and built infrastructure in the environment to protect and sustainably manage our water resources. Our current work explores the interactions between hydrologic processes and biogeochemical cycles across terrestrial-aquatic interfaces (such as wetlands, the vadose zone, and the hyporheic zone) from site to watershed to continental scales using a combination of data synthesis, numerical modelling, and machine learning.
 
-<br> <br> <b><u>About Dr. Frederick Cheng<b/><u/> 
+<br> <br> <b>About Dr. Frederick Cheng</b> 
 
 <br> <br> I am a postdoctoral fellow in the Department of Ecosystem Science and Sustainability <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. In January 2024, I will be joining the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a> as an assistant professor and starting the Sustainable Watersheds Group. 
 
