--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ The Sustainable Watersheds Group at the University of Virginia is focused on how
 
 <br> <br> <b>About Dr. Frederick Cheng</b> 
 
-<br> <br> I am a postdoctoral fellow in the Department of Ecosystem Science and Sustainability <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. In January 2024, I will be joining the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a> as an assistant professor and starting the Sustainable Watersheds Group. 
+<br> <br> I am currently a postdoctoral researcher in the <a href="https://warnercnr.colostate.edu/ess/">Department of Ecosystem Science and Sustainability</a> at the <a href="https://www.colostate.edu/">Colorado State University</a>. In January 2024, I will be joining the <a href="https://evsc.as.virginia.edu/">Department of Environmental Sciences at the University of Virginia</a> as an assistant professor and starting the Sustainable Watersheds Group. 
 
 <br> <br> My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
