--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ The Sustainable Watersheds Group at the University of Virginia is focused on how
 
 <br> <br> My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
- <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and a game of Dungeons and Dragons! 
+ <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and all sorts of boards! 
 
