--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Sustainable Watersheds Group
+title: The Sustainable Watersheds Group
 description: Research website for Frederick Cheng at Colorado State University
 no_link_title: false 
 hide_description: true
@@ -19,5 +19,5 @@ The Sustainable Watersheds Group at the University of Virginia is focused on how
 
 <br> <br> My research interest lies in the sustainable management of our water resources by exploring the interactions between hydrological and biogeochemical processes across different scales. Topics of particular interest are: modelling groundwater-surface water interactions, ecohydrological modelling across scales, contaminant fate in watersheds.
 
- <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and all sorts of boards! 
+ <br> <br> Outside of the lab, I enjoy competitive ballroom dancing, bouldering, and all sorts of board games! 
 
